# BotWA

./: .gitignore  PRD-BOT-WHATSAPP-KKN.md  README.md
deploy/aws/: staging.yml
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docs/: CODEBASE-CONTEXT.md
docs/runbooks/: aws-migration.md  backup-restore.md  memory-pressure.md  outage-recovery.md  pairing-recovery.md  token-rotation.md
gateway/: .dockerignore  Dockerfile  eslint.config.js  package-lock.json  package.json
gateway/scripts/: pair-local.mjs  patch-baileys-pairing.js
gateway/src/: index.ts
gateway/tests/: auth.test.ts  db.test.ts  document-render.test.ts  name-map.test.ts  parse.test.ts  schedule-auto.test.ts  (+2 more)
issue/: 001-prd-bot-whatsapp-kkn.md  002-revisi-prd-arsitektur-operasional.md  003-release-hardening.md  004-aws-staging-deployment.md
scripts/: backup.sh  deploy.sh  pair-local.mjs  restore.sh  upload-session-to-staging.sh
worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
worker/app/: auth.py  config.py  main.py
worker/app/providers/: cascade.py  types.py
worker/app/routers/: chat.py  health.py  memory.py  pdf.py  schedule.py  summary.py
worker/app/schemas/: requests.py  summary_output.py
worker/app/services/: chat_service.py  memory_service.py  pdf_service.py  preprocessor.py  schedule_parser.py  sensitivity.py  summary_service.py  validator.py
worker/config/prompts/: pdf_analysis.yaml  schedule.yaml  summary.yaml
worker/tests/: conftest.py  test_health_auth.py  test_preprocessor_validator.py  test_schedule_sensitivity_provider.py
(+40 files in other folders)
