[project]
name = "rembugbot-worker"
version = "0.1.0"
description = "RembugBot AI Worker - Summary, PDF, Schedule processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.82.0",
    "pyyaml>=6.0.2",
    "pdfplumber>=0.11.6",
    "pytesseract>=0.3.13",
    "Pillow>=11.2.1",
    "dateparser>=1.2.1",
    "pyparsing>=3.2.3",
    "httpx>=0.28.1",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    "ruff>=0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
